# electron-sextets-triplet-carbenes

./: .gitignore  README.md  pyproject.toml
backends/: __init__.py  pyscf_backend.py
docs/superpowers/specs/: 2026-05-11-carbene3-priority1-implementation-plan.md  2026-05-11-electron-sextets-triplet-carbenes-design.md
molecules/: carbene1.json  carbene1.xyz  carbene2.json  carbene2.xyz  carbene3.json  carbene3.xyz
results/: paper3_reproduction_summary.csv
src/: run_triplet_tda.py  summarize_results.py
